Added a basic command palette
Fixes #51